[!] Bug: Wrong padding in standalone skin. Sale module.

--- a/src/skins/default/en/css/lc.css
+++ b/src/skins/default/en/css/lc.css
@@ -1073,7 +1073,7 @@ div.product-details .product-image-gallery
 .product-details ul.product-price {
   list-style: none;
   display: block;
-  margin-bottom: 70px;
+  margin-bottom: 90px;
 }
 
 .product-details ul.product-price li {
